--- a/index.html
+++ b/index.html
@@ -248,7 +248,7 @@
                 0~960|960*1100$height:100%;background-color:#000;left:50%;top:50%;transform:translateX=-50%@translateY=-50%;position:absolute^
                 961~1920|1920*1080$height:1080px;background-color:#000;left:50%;top:50%;transform:translateX=-50%@translateY=-50%;position:absolute^
                 1921~9999|1920*1080$height:1080responmin;background-color:#000;left:50%;top:50%;transform:translateX=-50%@translateY=-50%;position:absolute">
-                    <source src="mainvideoShort.mp4" type="video/mp4">
+                    <source src="mainvideo.mp4" type="video/mp4">
                 </video>
             </div>
 
