file added changess

--- a/gameGuides.html
+++ b/gameGuides.html
@@ -612,7 +612,7 @@
                     1025~1400|1400*1100$width:100%;height:auto;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff;opacity:0;transform:skewX=70deg@rotateY=45deg^
                     1401~1920|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff;opacity:0;transform:skewX=70deg@rotateY=45deg^
                     1921~9999|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff;opacity:0;transform:skewX=70deg@rotateY=45deg"targetindex='scroll_response_group1_ptxtTarget16'response_properties='transform'>
-                    높은 위치에서 점프낙하중에 공중에 있는 상태에서 이동키활성시에 공중에서 나는 형태의 flying모드 가능합니다. 해당 상태에선 천천히 이동되며, 중력에 영향을 받지 않는듯이 천천히 이륙가능합니다.이동키를 뗴면 다시 중력에 영향을 크게 받아 지면에 빨리 착지하게됩니다.
+                    높은 위치에서 점프낙하중에 공중에 있는 상태에서 이동키활성시에 공중에서 나는 형태의 flying모드 가능합니다. 해당 상태에선 천천히 이동되며, 중력에 영향을 받지 않는듯이 천천히 착지가능합니다.이동키를 뗴면 다시 중력에 영향을 크게 받아 지면에 빨리 착지하게됩니다.
                     </p>
                 </div>
                 <div class=' mediaItem javascript_Css_define javascript_scroll_response javascript_scroll_response_group1'javascript_Css_define="
@@ -634,7 +634,7 @@
                     1025~1400|1400*1100$width:100%;height:auto;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff;opacity:0;transform:skewX=70deg@rotateY=45deg^
                     1401~1920|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff;opacity:0;transform:skewX=70deg@rotateY=45deg^
                     1921~9999|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff;opacity:0;transform:skewX=70deg@rotateY=45deg"targetindex='scroll_response_group1_ptxtTarget17'response_properties='transform'>
-                    해당맵은 정식명칭 'planeGround'으로 원래는 평화로운 자연그대로의 거대한 초원Garden지역이었으나 현재는 EvilHumans에 의해서 조경단지로써 개발되고관리되고있는 지역으로써 EvilhUmans도 이곳의 자연환경은 마음에 들었는지 냅두고, 이곳에 풍부하게 있는 천역 곡물과,밀,거대식량,광물단지로써 사용하고있고, 통제관리를 위해 노동력,로봇,전투방어 병력등을 배치해두었습니다. 이곳은 모든 지역중 가장 오염이 적게된 지역이기도 합니다.
+                    해당맵은 정식명칭 'planeGround'으로 원래는 평화로운 자연그대로의 거대한 초원Garden지역이었으나 현재는 EvilHumans에 의해서 조경단지로써 개발되고관리되고있는 지역으로써 EvilhUmans도 이곳의 자연환경은 마음에 들었는지 냅두고, 이곳에 풍부하게 있는 천연 곡물과,밀,거대식량,광물단지로써 사용하고있고, 통제관리를 위해 노동력,로봇,전투방어 병력등을 배치해두었습니다. 이곳은 모든 지역중 가장 오염이 적게된 지역이기도 합니다.
                     </p>
                 </div>
                 <div class=' mediaItem javascript_Css_define javascript_scroll_response javascript_scroll_response_group1'javascript_Css_define="
