--- a/gameGuides.html
+++ b/gameGuides.html
@@ -172,7 +172,7 @@
                     1025~1400|1400*1100$width:100%;height:auto;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
                     1401~1920|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
                     1921~9999|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff">
-                    해당 게임은 pc&Laptop용(마우스,키보드 존재기기)의 해상도폭 1400px이상의 기기에서 이용하는것 권장드리며, 현재까진 모바일&태블릿의 터치인터페이스는 지원하지 않습니다.
+                    해당 게임은 pc&Laptop용(마우스,키보드 존재기기)의 해상도폭 1400px이상의 기기에서 이용하는것 권장드리며, 현재까진 모바일&태블릿의 터치인터페이스는 지원하지 않습니다. 1440x900해상도 화면에서까지도 현재 플레이는 가능합니다. FHD(1920*1080)해상도에 최적화되어있습니다.
                     </p>
                 </div>
                 <div class=' mediaItem javascript_Css_define'javascript_Css_define="
@@ -238,7 +238,7 @@
                     1025~1400|1400*1100$width:100%;height:auto;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
                     1401~1920|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
                     1921~9999|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff">
-                    'T'스킬의 경우 사진과 같이 캐릭터 위에 존재하는 무기로 'T'키를 누르고있는동안에만 활성화되며 누르고있는동안 무기가 전방으로 회전하면서 적들을 공격가능합니다. 무기를 사용할수있는 캐릭터들은 우측조작ui상에 무기아이콘이 표시되며, 무기스킬의 경우 물량전보다는 보스전에서 유용할수있습니다. 팁을 하나 드리자면 무기자체의 순수화력의 강함은 푸키>로이드>카이>윈디>핑키 이며, 푸키의 경우 무기를 잘만 사용하면 보스전에서 엄청난 화력을 발휘가능합니다. 또한 무기를 이용한 전투에서 적들이 많은 맵에선 초반에 몬스터에셋이 많을때 다소 렉이 걸려서 무기스킬사용시 무기회전속도가 느려서 데미지가 제대로 들어가지 않을수있는데, 이런경우 적절히 레이저스킬,폭발스킬과 같이 사용하면서 몬스터수를 줄여나가면서 렉이 줄었을때 무기스킬을 사용하면 빠른회전으로 공격가능합니다. 또한 무기스킬로 무리하게 전투기공중유닛을 잡으려고 시도하지마세요.
+                    'T'스킬의 경우 사진과 같이 캐릭터 위에 존재하는 무기로 'T'키를 누르고있는동안에만 활성화되며 누르고있는동안 무기가 전방으로 회전하면서 적들을 공격가능합니다. 무기를 사용할수있는 캐릭터들은 우측조작ui상에 무기아이콘이 표시되며, 무기스킬의 경우 물량전보다는 보스전에서 유용할수있습니다. 팁을 하나 드리자면 무기자체의 순수화력의 강함은 푸키>로이드>카이>윈디>핑키 이며, 무기를 잘 사용하면 보스전에서 엄청난 화력을 발휘가능합니다. 또한 무기를 이용한 전투에서 적들이 많은 맵에선 초반에 몬스터에셋이 많을때 다소 렉이 걸려서 무기스킬사용시 무기회전속도가 느려서 데미지가 제대로 들어가지 않을수있는데, 이런경우 적절히 레이저스킬,폭발스킬과 같이 사용하면서 몬스터수를 줄여나가면서 렉이 줄었을때 무기스킬을 사용하면 빠른회전으로 공격가능합니다. 또한 무기스킬로 무리하게 전투기공중유닛을 잡으려고 시도하지마세요.
                     </p>
                 </div>
                 <div class=' mediaItem javascript_Css_define javascript_scroll_response javascript_scroll_response_group1'javascript_Css_define="
@@ -392,7 +392,7 @@
                     1025~1400|1400*1100$width:100%;height:auto;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff;opacity:0;transform:skewX=70deg@rotateY=45deg^
                     1401~1920|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff;opacity:0;transform:skewX=70deg@rotateY=45deg^
                     1921~9999|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff;opacity:0;transform:skewX=70deg@rotateY=45deg"targetindex='scroll_response_group1_ptxtTarget6'response_properties='transform'>
-                    건물에 스킬사용시 무너지는 연출이 발생하는 건물들이 있을텐데 해당 건물의 경우 적군 건물인겁니다.
+                    건물에 스킬사용시 무너지는 연출이 발생하는 건물들이 있을텐데 해당 건물의 경우 적군 건물인겁니다. 건물은 'Q'스킬,'F'스킬,'T'스킬 모두로 부술수있습니다.
                     </p>
                 </div>
                 <div class=' mediaItem javascript_Css_define javascript_scroll_response javascript_scroll_response_group1'javascript_Css_define="
@@ -908,12 +908,143 @@
                     treeMatrix
                     </p>
                 </div>
-                <div class='galleryItem javascript_Css_define 'javascript_Css_define="
+            </div>
+        </div>
+    </section>
+
+    <section class="section3-1 noticeList javascript_Css_define  overflow_hidden "
+    >
+        <div class="contentWrap  javascript_Css_define"style='z-index:9'javascript_Css_define="
+        0~640|640*1100$padding-bottom:290responmax;opacity:0.96^
+        641~1024|1024*1100$padding-bottom:203responmax;opacity:0.96^
+        1025~1920|1920*1080$padding-bottom:310responmin;opacity:0.96^
+        1921~9999|1920*1080$padding-bottom:310responmin;opacity:0.96">
+            <div class="sectionMessage">
+                <h2 class="sectionTit javascript_Css_define fontfamily_Montserrat_Bold"javascript_Css_define="
+                0~640|640*1100$padding-left:22response;padding-top:26responh;font-size:35responmin;padding-bottom:30responh;color:#202020^
+                641~1024|1024*1100$padding-left:53response;padding-top:95responh;font-size:60responmax;padding-bottom:30responh;color:#202020^
+                1025~1920|1920*1080$padding-left:116response;padding-top:201responh;font-size:103responmin;padding-bottom:57responh;color:#202020^
+                1921~9999|1920*1080$padding-left:116response;padding-top:201responh;font-size:103responmin;padding-bottom:57responmin;color:#202020">
+                NOTICE
+                </h2>
+            </div>
+            
+            <div class="noticeList javascript_Css_define"javascript_Css_define="
+            0~640|640*1100$padding-left:22response;padding-right:35response;display:block^
+            641~1024|1024*1100$padding-left:58response;padding-right:76response;display:flex;flex-flow:row wrap^
+            1025~1400|1920*1080$padding-left:40response;padding-right:40response;display:flex;flex-flow:row wrap^
+            1401~1920|1920*1080$padding-left:40response;padding-right:40response;display:flex;flex-flow:row wrap^
+            1921~9999|1920*1080$padding-left:40response;padding-right:40response;display:flex;flex-flow:row wrap">     
+                <div class='noticeItem javascript_Css_define 'javascript_Css_define="
                 0~640|640*1100$padding-bottom:80responmin;width:100%^
                 641~1024|1024*1100$padding-bottom:72responmin;width:47%;margin-left:1%;margin-right:1%^
                 1025~1920|1920*1080$padding-bottom:94responmin;width:31%;margin-left:1%;margin-right:1%^
                 1921~9999|1920*1080$padding-bottom:94responmin;width:23%;margin-left:1%;margin-right:1%">
-                    <a href='https://sinjaesung.github.io/webPageTest/characterSelect.html'target='_blank'><div class="videoFrame javascript_Css_define position_relative_normal "javascript_Css_define="
+                <div class="videoFrame javascript_Css_define position_relative_normal "javascript_Css_define="
+                    0~640|640*1100$width:100%;height:552response;border-radius:20response;overflow:hidden;margin-bottom:9responh^
+                    641~1024|1024*1100$width:100%;height:400response;border-radius:20response;overflow:hidden;margin-bottom:9responh^
+                    1025~1920|1920*1080$width:100%;height:520response;border-radius:20responmin;overflow:hidden;margin-right:16response^
+                    1921~9999|1920*1080$width:100%;height:420response;border-radius:20responmin;overflow:hidden;margin-right:16response" >
+                        <img src="notice/blankGradientMemory.PNG"class='display_block javascript_Css_define'javascript_Css_define="
+                        0~9999|1920*1080$width:100%;height:100%"/>
+                    </div>
+                    <p class="javascript_Css_define "javascript_Css_define="
+                    0~640|640*1100$width:100%;height:auto;font-size:12px;font-weight:600;text-shadow:0 0 10px #fff^
+                    641~1024|1024*1100$width:100%;height:auto;font-size:16px;font-weight:600;text-shadow:0 0 10px #fff^
+                    1025~1400|1400*1100$width:100%;height:auto;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
+                    1401~1920|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
+                    1921~9999|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff">
+                    SINJA game은 THREEJS 기반의 웹브라우저 게임이므로,하드디스크 설치용량은 필요없습니다. 해당 게임은 PC환경게임이며 ,FHD해상도 1920*1080화면에 최적화되어있습니다. 노트북크기화면까지도 플레이는 가능하겠지만 화면이 작아서 좁게 느껴질것입니다.
+                    </p>
+                    <p class="javascript_Css_define "javascript_Css_define="
+                    0~640|640*1100$width:100%;height:auto;font-size:12px;font-weight:600;text-shadow:0 0 10px #fff^
+                    641~1024|1024*1100$width:100%;height:auto;font-size:16px;font-weight:600;text-shadow:0 0 10px #fff^
+                    1025~1400|1400*1100$width:100%;height:auto;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
+                    1401~1920|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
+                    1921~9999|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff">
+                    SINJA game은 WITHOUT ENGINE(unreal,unity) threejs 게임이며, 현재도 계속 내부적으로 메모리최적화 관련 작업을 진행중이며, 현재까지는 게임을 원할히 플레이하기위해선 최소 16gb ram은 필요합니다. 24~32gb정도 되어야 원할히 가능할것으로 보이며, 제 컴퓨터환경의 경우 32GB램으로 cpu,gpu에 비해서 RAM(메모리)만큼은 신경쓴 환경인데, 메모리 관련하여 플레이중에 이슈사항은 없었습니다.
+                    </p>
+                </div>
+                <div class='noticeItem javascript_Css_define 'javascript_Css_define="
+                0~640|640*1100$padding-bottom:80responmin;width:100%^
+                641~1024|1024*1100$padding-bottom:72responmin;width:47%;margin-left:1%;margin-right:1%^
+                1025~1920|1920*1080$padding-bottom:94responmin;width:31%;margin-left:1%;margin-right:1%^
+                1921~9999|1920*1080$padding-bottom:94responmin;width:23%;margin-left:1%;margin-right:1%">
+                   <div class="videoFrame javascript_Css_define position_relative_normal "javascript_Css_define="
+                    0~640|640*1100$width:100%;height:552response;border-radius:20response;overflow:hidden;margin-bottom:9responh^
+                    641~1024|1024*1100$width:100%;height:400response;border-radius:20response;overflow:hidden;margin-bottom:9responh^
+                    1025~1920|1920*1080$width:100%;height:520response;border-radius:20responmin;overflow:hidden;margin-right:16response^
+                    1921~9999|1920*1080$width:100%;height:420response;border-radius:20responmin;overflow:hidden;margin-right:16response" >
+                        <img src="notice/blankGradientMemory.PNG"class='display_block javascript_Css_define'javascript_Css_define="
+                        0~9999|1920*1080$width:100%;height:100%"/>
+                    </div>
+                    <p class="javascript_Css_define "javascript_Css_define="
+                    0~640|640*1100$width:100%;height:auto;font-size:12px;font-weight:600;text-shadow:0 0 10px #fff^
+                    641~1024|1024*1100$width:100%;height:auto;font-size:16px;font-weight:600;text-shadow:0 0 10px #fff^
+                    1025~1400|1400*1100$width:100%;height:auto;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
+                    1401~1920|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
+                    1921~9999|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff">
+                    게임플레이 도중에 푸른그라디언트색상의 빈화면이 갑자기 잠시동안 펼쳐지면서 1~2초간 있다가 다시 원래대로 돌아오는 현상이 발상한다면 threejs 환경에서 자체적으로 브라우저 점유메모리를 client사용자 OS 시스템에 free반환하는 과정으로 인한것이며,성능적인 부분에서 문제가없게끔 하기위한 threejs환경자체의 구동기능이므로 이 점 게임 이용시 참고부탁드립니다. 저러한 현상은 32GM RAM인 제환경에선 발생하지않으며, 사용자 PC 보유 RAM이 낮을수록 저 현상은 더 자주 나타날 가능성이 있습니다.(브라우저 RAM점유율이 가득차서 OS에 반환하는 과정이 더 자주 반복)
+                    </p>
+                </div>
+                <div class='noticeItem javascript_Css_define 'javascript_Css_define="
+                0~640|640*1100$padding-bottom:80responmin;width:100%^
+                641~1024|1024*1100$padding-bottom:72responmin;width:47%;margin-left:1%;margin-right:1%^
+                1025~1920|1920*1080$padding-bottom:94responmin;width:31%;margin-left:1%;margin-right:1%^
+                1921~9999|1920*1080$padding-bottom:94responmin;width:23%;margin-left:1%;margin-right:1%">
+                   <div class="videoFrame javascript_Css_define position_relative_normal "javascript_Css_define="
+                    0~640|640*1100$width:100%;height:552response;border-radius:20response;overflow:hidden;margin-bottom:9responh^
+                    641~1024|1024*1100$width:100%;height:400response;border-radius:20response;overflow:hidden;margin-bottom:9responh^
+                    1025~1920|1920*1080$width:100%;height:520response;border-radius:20responmin;overflow:hidden;margin-right:16response^
+                    1921~9999|1920*1080$width:100%;height:420response;border-radius:20responmin;overflow:hidden;margin-right:16response" >
+                        <img src="img/creatorMe.png"class='display_block javascript_Css_define'javascript_Css_define="
+                        0~9999|1920*1080$width:100%;height:100%"/>
+                    </div>
+                    <p class="javascript_Css_define "javascript_Css_define="
+                    0~640|640*1100$width:100%;height:auto;font-size:12px;font-weight:600;text-shadow:0 0 10px #fff^
+                    641~1024|1024*1100$width:100%;height:auto;font-size:16px;font-weight:600;text-shadow:0 0 10px #fff^
+                    1025~1400|1400*1100$width:100%;height:auto;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
+                    1401~1920|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
+                    1921~9999|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff">
+                    최소사양 | OS: win10권장, cpu: intel i3 이상/Ryzen 3이상 , gpu: NVIDIA GeForce GTX 460 혹은 AMD Radeon HD6850 이상, RAM:16GB, directX : 10이상
+                    </p>
+                    <p class="javascript_Css_define "javascript_Css_define="
+                    0~640|640*1100$width:100%;height:auto;font-size:12px;font-weight:600;text-shadow:0 0 10px #fff^
+                    641~1024|1024*1100$width:100%;height:auto;font-size:16px;font-weight:600;text-shadow:0 0 10px #fff^
+                    1025~1400|1400*1100$width:100%;height:auto;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
+                    1401~1920|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
+                    1921~9999|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff">
+                    권장사양 | OS: win10권장, cpu: intel i5 이상/Ryzen 5이상 , gpu: NVIDIA GeForce GTX 1050이상 혹은 AMD Radeon RX560 2G 이상(1080P FHD)<br/> gpu: NVIDIA Geforce RTX 2070,AMD Radeon RX5700XT이상(1440P QHD), <br/> RAM:24GB~32GB, directX : 10이상
+                    </p>
+                </div>
+                <div class='noticeItem javascript_Css_define 'javascript_Css_define="
+                0~640|640*1100$padding-bottom:80responmin;width:100%^
+                641~1024|1024*1100$padding-bottom:72responmin;width:47%;margin-left:1%;margin-right:1%^
+                1025~1920|1920*1080$padding-bottom:94responmin;width:31%;margin-left:1%;margin-right:1%^
+                1921~9999|1920*1080$padding-bottom:94responmin;width:23%;margin-left:1%;margin-right:1%">
+                   <div class="videoFrame javascript_Css_define position_relative_normal "javascript_Css_define="
+                    0~640|640*1100$width:100%;height:552response;border-radius:20response;overflow:hidden;margin-bottom:9responh^
+                    641~1024|1024*1100$width:100%;height:400response;border-radius:20response;overflow:hidden;margin-bottom:9responh^
+                    1025~1920|1920*1080$width:100%;height:520response;border-radius:20responmin;overflow:hidden;margin-right:16response^
+                    1921~9999|1920*1080$width:100%;height:420response;border-radius:20responmin;overflow:hidden;margin-right:16response" >
+                        <img src="img/creatorMe.png"class='display_block javascript_Css_define'javascript_Css_define="
+                        0~9999|1920*1080$width:100%;height:100%"/>
+                    </div>
+                    <p class="javascript_Css_define "javascript_Css_define="
+                    0~640|640*1100$width:100%;height:auto;font-size:12px;font-weight:600;text-shadow:0 0 10px #fff^
+                    641~1024|1024*1100$width:100%;height:auto;font-size:16px;font-weight:600;text-shadow:0 0 10px #fff^
+                    1025~1400|1400*1100$width:100%;height:auto;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
+                    1401~1920|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
+                    1921~9999|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff">
+                    해당게임은 3D게임으로 정해진 맵들이 있고 MINDSET연합이 적들이 존재하는 맵 별로 이동하면서 적들과 싸우면서 맵간 이동하며 돌아다니는 게임입니다. 레벨,장비,온라인여부는 아직 미개발상태이며, 아직까진 1인 플레이게임입니다.
+                    </p>
+                </div>
+                <div class='noticeItem javascript_Css_define 'javascript_Css_define="
+                0~640|640*1100$padding-bottom:80responmin;width:100%^
+                641~1024|1024*1100$padding-bottom:72responmin;width:47%;margin-left:1%;margin-right:1%^
+                1025~1920|1920*1080$padding-bottom:94responmin;width:31%;margin-left:1%;margin-right:1%^
+                1921~9999|1920*1080$padding-bottom:94responmin;width:23%;margin-left:1%;margin-right:1%">
+                    <a href='https://sinjaesung.github.io/SINJAgame/characterSelect.html'target='_blank'><div class="videoFrame javascript_Css_define position_relative_normal "javascript_Css_define="
                     0~640|640*1100$width:100%;height:552response;border-radius:20response;overflow:hidden;margin-bottom:9responh^
                     641~1024|1024*1100$width:100%;height:400response;border-radius:20response;overflow:hidden;margin-bottom:9responh^
                     1025~1920|1920*1080$width:100%;height:520response;border-radius:20responmin;overflow:hidden;margin-right:16response^
@@ -1003,7 +1134,7 @@
                     1025~1400|1400*1100$width:100%;height:auto;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
                     1401~1920|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
                     1921~9999|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff">
-                    영상과 같이 건물or벽상에서 이동키,점프로 벽타듯이 위로 올라갈수있습니다.
+                    영상과 같이 건물or벽상에서 이동키,점프로 벽타듯이 위로 올라갈수있습니다. 스페이스바를 계속 누르고있는게 아니라,여러번 연타해야 닷지하면서 올라갈수있습니다.
                     </p>
                 </div>
                 <div class=' videoItem javascript_Css_define'javascript_Css_define="
