--- a/index.html
+++ b/index.html
@@ -253,8 +253,8 @@
             </div>
 
             <div id="transformAnimateTarget3_" class="javascript_Css_define position_absolute javascript_inlinestyle_responsive_elements"javascript_Css_define="
-            0~640|640*1100$width:100%;height:100%;bottom:0%;right:-300%;background-color:#8020ef;transform:skewY=30deg@translateZ=-5800responmax@rotateZ=360deg;opacity:0^
-            641~1024|1024*1080$width:100%;height:100%;bottom:0%;right:-300%;background-color:#8020ef;transform:skewY=30deg@translateZ=-6000responmax@rotateZ=360deg;opacity:0^
+            0~640|640*1100$display:none^
+            641~1024|1024*1080$display:none^
             1025~9999|1920*1080$width:100%;height:100%;bottom:0%;right:-300%;background-color:#8020ef;transform:skewY=30deg@translateZ=-7000responmin@rotateZ=360deg;opacity:0
             "response_properties="transform">
             </div>
@@ -296,7 +296,6 @@
             1025~1400|1920*1080$padding-left:40response;padding-right:40response;display:flex;flex-flow:row wrap^
             1401~1920|1920*1080$padding-left:40response;padding-right:40response;display:flex;flex-flow:row wrap^
             1921~9999|1920*1080$padding-left:40response;padding-right:40response;display:flex;flex-flow:row wrap">
-            <!--모바일브라우저 기기일때는 모든 비디오리스트에서 비디오대신 섬네일이미지 표시되게하고, 피시브라우저기기일때는 태블릿이상크기일떄는 비디오로 나오게끔..자바스크립트로 처리필요.-->
                 <div class=' mediaItem javascript_Css_define'javascript_Css_define="
                 0~640|640*1100$padding-bottom:80responmin;width:100%^
                 641~1024|1024*1100$padding-bottom:72responmin;width:47%;margin-left:1%;margin-right:1%^
