--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
                     1025~1400|1400*1100$width:100%;height:auto;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
                     1401~1920|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
                     1921~9999|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff">
-                    HumanEnemys | pistolMan | 치명적인 피스톨총 사용
+                    HumanEnemys | pistolMan | 독성 피스톨총 사용
                     </p>
                 </div>
                 <div class=' mediaItem javascript_Css_define'javascript_Css_define="
