--- a/gameGuides.html
+++ b/gameGuides.html
@@ -1061,6 +1061,28 @@
                     SINJA 게임 체험 해보기
                     </p>
                 </div>
+                <div class='noticeItem javascript_Css_define 'javascript_Css_define="
+                0~640|640*1100$padding-bottom:80responmin;width:100%^
+                641~1024|1024*1100$padding-bottom:72responmin;width:47%;margin-left:1%;margin-right:1%^
+                1025~1920|1920*1080$padding-bottom:94responmin;width:31%;margin-left:1%;margin-right:1%^
+                1921~9999|1920*1080$padding-bottom:94responmin;width:23%;margin-left:1%;margin-right:1%">
+                    <a href='https://sinjaesung.github.io/SINJAgame/characterSelect_Simple.html'target='_blank'><div class="videoFrame javascript_Css_define position_relative_normal "javascript_Css_define="
+                    0~640|640*1100$width:100%;height:552response;border-radius:20response;overflow:hidden;margin-bottom:9responh^
+                    641~1024|1024*1100$width:100%;height:400response;border-radius:20response;overflow:hidden;margin-bottom:9responh^
+                    1025~1920|1920*1080$width:100%;height:520response;border-radius:20responmin;overflow:hidden;margin-right:16response^
+                    1921~9999|1920*1080$width:100%;height:420response;border-radius:20responmin;overflow:hidden;margin-right:16response" >
+                        <img src="img/creatorMe.png"class='display_block javascript_Css_define'javascript_Css_define="
+                        0~9999|1920*1080$width:100%;height:100%"/>
+                    </div></a>
+                    <p class="javascript_Css_define "javascript_Css_define="
+                    0~640|640*1100$width:100%;height:auto;font-size:12px;font-weight:600;text-shadow:0 0 10px #fff^
+                    641~1024|1024*1100$width:100%;height:auto;font-size:16px;font-weight:600;text-shadow:0 0 10px #fff^
+                    1025~1400|1400*1100$width:100%;height:auto;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
+                    1401~1920|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
+                    1921~9999|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff">
+                    SINJA 게임 체험 해보기(저사양 : Ram 8GB까지 허용)
+                    </p>
+                </div>
             </div>
         </div>
     </section>
