indexPage text change

--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
                     1025~1400|1400*1100$width:100%;height:auto;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
                     1401~1920|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
                     1921~9999|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff">
-                    카이(Mindset 초인) | TIGERsymobl | 근면,인내,꾸준함,결의,용맹
+                    카이(Mindset 초인) | TIGERsymbol | 근면,인내,꾸준함,결의,용맹
                     </p>
                 </div>
                 <div class=' mediaItem javascript_Css_define'javascript_Css_define="
@@ -422,7 +422,7 @@
                     1025~1400|1400*1100$width:100%;height:auto;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
                     1401~1920|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff^
                     1921~9999|1920*1080$width:100%;height:auto;padding-top:22responmin;font-size:18responmin;font-weight:600;text-shadow:0 0 10px #fff">
-                    로이드(Mindset 초인) | DRAGONsymobl | 긍정,용기,냉정
+                    로이드(Mindset 초인) | DRAGONsymbol | 긍정,용기,냉정
                     </p>
                 </div>
                 <div class=' mediaItem javascript_Css_define'javascript_Css_define="
